# marcos_server

./: README.org  readme.org
src/: CMakeLists.txt  hardware.cpp  hardware.hpp  iface.cpp  iface.hpp  marcos_server.cpp  server_config.h  version.h  version.hpp
